Don't run release job without tagged commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,8 @@ workflows:
       - build
       - release:
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.+/
 
