--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,14 +18,14 @@ jobs:
           ${{ secrets.CONTAINER_IMAGE }}
         tags: |
           type=sha,format=long
-          type=semver,patterm={{version}}
+          type=semver,pattern={{version}}
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v2
       with:
         install: true
     - name: Log in to container registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ${{ secrets.CONTAINER_REGISTRY }}
         username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
